--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ cache:
     - node_modules
 sudo: required
 before_deploy:
-  - curl -L https://clis.ng.bluemix.net/download/bluemix-cli/0.6.1/linux64 | tar -zx
-  - chmod -R u+x ./Bluemix_CLI/bin
-  - chmod +x ./config/travis/bluemix-deploy.sh
+  - curl -L https://clis.ng.bluemix.net/download/bluemix-cli/latest/linux64| tar -zx
+  - chmod -R u+x ./IBMCloud_CLI/bin
+  - chmod +x ./config/travis/ibmcloud-deploy.sh
 deploy:
   provider: script
   script: ./config/travis/bluemix-deploy.sh
