--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 sudo: required
 before_deploy:
   - curl -L https://clis.ng.bluemix.net/download/bluemix-cli/latest/linux64| tar -zx
-  - chmod -R u+x ./IBMCloud_CLI/bin
+  - chmod -R u+x ./Bluemix_CLI/bin
   - chmod +x ./config/travis/ibmcloud-deploy.sh
 deploy:
   provider: script
