fix env file endpoint

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_OPENWHISK_ENDPOINT=<ENTER OPENWHISK ENDPOINT URL>
+REACT_APP_OPENWHISK_ENDPOINT=https://7129221a.eu-gb.apiconnect.appdomain.cloud/ab8b6d62-1d94-4a20-a6fc-f97ac29ecc71/converse
